--- a/src/main/resources/assets/modtemplate/lang/en_us.json
+++ b/src/main/resources/assets/modtemplate/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "itemGroup.tabModTemplate": "Mod Template"
+  "itemGroup.tabModTemplate": "Mod Template",
+  
+  "item.modtemplate.mt_icon": "MT Icon"
 }
